# esp-box

./: CMakeLists.txt
.github/: workflowswirkingfactorybuildfile
.github/workflows/: Espboxrepo  FactoryDemo  FactoryDemo.yml  Tempdebug.yml  build-esp-box-hub.yml  build-factory-demo.yml  build.yml  espbox  espbox.yml
.github/workflows/.github/workflows/: setup-espbox.yml
components/bsp/: idf_component.yml
custom/main/: main.c
docs/: Yamlfile changes  builderrors
examples/: espbox_setup_active.sh
examples/esp-box/firmware/: CMakeLists.txt  Sdkconfig.defaults
examples/esp-box/firmware/components/espnow/examples/esp-box/firmware/: CMakeLists.txt
examples/esp-box/firmware/examples/esp-box/firmware/: idf_component.yml
examples/esp-box/firmware/examples/esp-box/firmware/main/: main.c
examples/esp-box/firmware/main/: CMakeLists.txt  idf_component.yml  main.c  partitions.csv  sdkconfig.defaults  voice.c  voice.h
examples/factory_demo/: CMakeLists.txt  sdkconfig.defaults
examples/factory_demo/main/: CMakeLists.txt  device_control.c  device_control.h  idf_component.yml  main.c  web_server.c  web_server.h  wifi_connect.c  wifi_connect.h
firmware/: CMakeLists.txt
firmware/main/: main.c
