idf_component_register(
    SRCS
        "main.c"
        "app/app_sr.c"
        "app/app_wifi.c"
        "gui/ui_main.c"
        "gui/font/font_en_bold_10.c"
        "gui/font/font_en_64.c"
    INCLUDE_DIRS
        "."
        "app"
        "gui"
    REQUIRES
        espressif/esp_lcd_ili9341       # <-- Must use slash, not dash
        espressif/esp_lcd_touch
        espressif/esp_lcd_touch_gt911
        lvgl/lvgl
        espressif/esp-dsp
        espressif/mdns
        espressif/led_strip
        espressif/esp_codec_dev
        espressif/ir_learn
        espressif/qrcode
        espressif/esp_rainmaker
        wifi_provisioning
        esp-box-3
)
